--- a/.gitignore
+++ b/.gitignore
@@ -334,6 +334,7 @@ fabric.properties
 # that are supposed to be shared within teams.
 
 .idea/*
+*/.idea/
 
 !.idea/codeStyles
 !.idea/runConfigurations
